Adjusted gif height

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <img src="manager.gif" alt="manager">
         <script src="index.js"></script>
     </body>
 </html>
